--- a/EasyNote/Views/Shared/_LoginPartial.cshtml
+++ b/EasyNote/Views/Shared/_LoginPartial.cshtml
@@ -1,11 +1,4 @@
 ﻿@using Microsoft.AspNet.Identity
-@using System.Security.Claims
-
-@{ 
-    // https://stackoverflow.com/a/21405165/8783782
-    var identity = (ClaimsIdentity)User.Identity;
-    var displayName = identity.FindFirst("DisplayName")?.Value;
-}
 
 @if (Request.IsAuthenticated)
 {
@@ -15,7 +8,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + displayName + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Hello " + User.Identity.GetDisplayName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
