--- a/EasyNote/Views/Account/Login.cshtml
+++ b/EasyNote/Views/Account/Login.cshtml
@@ -30,9 +30,12 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
+                        @*https://getbootstrap.com/docs/3.3/css/#forms-example*@
                         <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
+                            <label>
+                                @Html.CheckBoxFor(m => m.RememberMe)
+                                Remember Me
+                            </label>
                         </div>
                     </div>
                 </div>
